--- a/user/dashboard/dashboard.css
+++ b/user/dashboard/dashboard.css
@@ -28,52 +28,71 @@ body {
   justify-self: center;
 }
 
-#logout-box {
-  align-self: end;
+#edit-lots-box {
+  align-self: center;
   display: grid;
-  justify-items: end;
-  align-items: end;
+  justify-items: center;
+  align-items: center;
+}
+
+#edit-lots-box-submit {
+  width: 15%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
+#view-cars-box {
+  align-self: center;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+#view-cars-box-submit {
+  width: 15%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
+#announcement-box {
+  align-self: center;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+#announcement-box-submit {
+  width: 15%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
+#logout-box {
+  align-self: center;
+  display: grid;
+  justify-items: center;
+  align-items: center;
 }
 
 #logout-box-submit {
-  width: 15%;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-  background-color: #3a3a3a;
-  cursor: pointer;
-  outline: none;
-}
-
-#checkin-box{
-  align-self: center;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-#checkin-box-submit {
-  width: 15%;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-  background-color: #3a3a3a;
-  cursor: pointer;
-  outline: none;
-}
-
-#checkout-box{
-  align-self: center;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-#checkout-box-submit {
   width: 15%;
   padding: 7px;
   border: none;
