--- a/user/dashboard/dashboard.css
+++ b/user/dashboard/dashboard.css
@@ -28,14 +28,14 @@ body {
   justify-self: center;
 }
 
-#edit-lots-box {
+#checkout-box {
   align-self: center;
   display: grid;
   justify-items: center;
   align-items: center;
 }
 
-#edit-lots-box-submit {
+#checkout-box-submit {
   width: 15%;
   padding: 7px;
   border: none;
@@ -47,33 +47,14 @@ body {
   outline: none;
 }
 
-#view-cars-box {
+#checkin-box {
   align-self: center;
   display: grid;
   justify-items: center;
   align-items: center;
 }
 
-#view-cars-box-submit {
-  width: 15%;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-  background-color: #3a3a3a;
-  cursor: pointer;
-  outline: none;
-}
-
-#announcement-box {
-  align-self: center;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-#announcement-box-submit {
+#checkin-box-submit {
   width: 15%;
   padding: 7px;
   border: none;
@@ -86,10 +67,10 @@ body {
 }
 
 #logout-box {
-  align-self: center;
+  align-self: end;
   display: grid;
-  justify-items: center;
-  align-items: center;
+  justify-items: end;
+  align-items: end;
 }
 
 #logout-box-submit {
