--- a/user/dashboard/dashboard.css
+++ b/user/dashboard/dashboard.css
@@ -7,17 +7,17 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
-  justify-items: stretch;
-  align-items: stretch;
+  justify-items: center;
+  align-items: center;
   background-color: #3a3a3a;
 }
 
 #main-holder {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 70%;
   display: grid;
-  justify-items: stretch;
-  align-items: stretch;
+  justify-items: center;
+  align-items: center;
   background-color: white;
   border-radius: 7px;
   box-shadow: 0px 0px 5px 2px black;
@@ -28,15 +28,34 @@ body {
   justify-self: center;
 }
 
+#view-parking-box {
+  align-self: felx-start;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+#view-parking-box-submit {
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
 #checkout-box {
-  align-self: center;
+  align-self: flex-start;
   display: grid;
   justify-items: center;
   align-items: center;
 }
 
 #checkout-box-submit {
-  width: 15%;
+  width: 100%;
   padding: 7px;
   border: none;
   border-radius: 5px;
@@ -48,14 +67,14 @@ body {
 }
 
 #checkin-box {
-  align-self: center;
+  align-self: flex-start;
   display: grid;
   justify-items: center;
   align-items: center;
 }
 
 #checkin-box-submit {
-  width: 15%;
+  width: 100%;
   padding: 7px;
   border: none;
   border-radius: 5px;
@@ -74,7 +93,7 @@ body {
 }
 
 #logout-box-submit {
-  width: 15%;
+  width: 100%;
   padding: 7px;
   border: none;
   border-radius: 5px;
@@ -84,3 +103,4 @@ body {
   cursor: pointer;
   outline: none;
 }
+
